# 12stones-backend

./: .env.example  .gitignore  Dockerfile  Procfile  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: b2e2d26b7851_initial_migration.py
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  content.py  job.py  narrative.py  project.py  social.py  user.py  video.py  voice.py
app/routers/: auth.py  content.py  instagram_import.py  jobs.py  narratives.py  projects.py  social.py  videos.py  voice.py
app/schemas/: auth.py  content.py  job.py  narrative.py  project.py  social.py  video.py  voice.py
app/utils/: __init__.py  elevenlabs.py  security.py  storage.py  test_ffmpeg.py  video.py
app/workers/: __init__.py  celery_app.py  content_tasks.py  narrative_tasks.py  video_tasks.py  voice_tasks.py
scripts/: generate_api_docs.py  generate_schema.py
